<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tomate Care</string>
    <string name="start">Inicio</string>
    <string name="identify">Identificar</string>
    <string name="diseases">Enfermedades</string>
    <string name="activity_logs">Registros de actividad</string>
    <string name="test_performance">Pruebas de rendimiento</string>
    <string name="app_improvement_description">Mejora la aplicación compartiendo tus imágenes</string>
    <string name="info_version">Version %s</string>
    <string name="info_description">Descubre nuestra app de identificación de enfermedades del tomate. Simplemente apunta la cámara a la planta y deja que la inteligencia artificial detecte y diagnostique rápidamente tu planta. ¡La democratización del acceso a tecnologias IA para los agricultores!</string>
    <string name="author" tools:ignore="Typos">Autor</string>
    <string name="info_author_name">Luis H. Olazo Luján</string>
    <string name="info_author_email">luisolazolujan@gmail.com</string>
    <string name="info_author_phone">+51 937387155</string>
    <string name="info_author_kaggle">kaggle.com/luisolazo</string>
    <string name="company">Compañia</string>
    <string name="company_name">Vanskarner</string>
    <string name="company_web">vanskarner.com</string>
    <string name="company_location">Lima, Perú</string>
    <string name="disease_agent">Agentes causantes</string>
    <string name="disease_symptoms">Síntomas</string>
    <string name="disease_develop">Condiciones de desarrollo</string>
    <string name="disease_control">Control</string>
    <string name="tips">Consejos</string>
    <string name="photos">Fotos</string>
    <string name="summary">Resumen</string>
    <string name="add_note">Agregar Nota</string>
    <string name="identification">Identificación</string>
    <string name="healthy">Saludable</string>
    <string name="sick">Enferma</string>
    <string name="total_time_spent">Tiempo total empleado:</string>
    <string name="total_sheets_analyzed">Total de hojas analizadas:</string>
    <string name="identified">identificadas: %s</string>
    <string name="recommendations">Recomendaciones</string>
    <string name="note">Nota</string>
    <string name="write_your_note_here">Escribe tu descripción aquí…</string>
    <string name="select">Seleccionar</string>
    <string name="delete">Eliminar</string>
    <string name="select_all">Seleccionar \nTodo</string>
    <string name="search_by_note">Busca por notas</string>
    <string name="search_by_diseases">Busca por nombre</string>
    <string name="identifying">Identificando…</string>
    <string name="threshold">Umbral</string>
    <string name="max_results">Resultados \nMáximos</string>
    <string name="number_threads">Numero de hilos</string>
    <string name="delegate">Delegar</string>
    <string name="model">Modelo</string>
    <string name="how_capture">Como Capturar:</string>
    <string name="how_no_capture">Como no capturar:</string>
    <string name="far">Alejada</string>
    <string name="very_close">Muy cerca</string>
    <string name="Blurred">Borroso</string>
    <string name="accumulated">Acumuladas</string>
    <string name="processing">Procesamiento</string>
    <string name="configuration">Configuración</string>
    <string name="description_performance">Pruebe las capacidades de su teléfono móvil con respecto a los diferentes modelos de clasificación de imágenes basado en redes neuronales.</string>
    <string name="launch">Iniciar</string>
    <string name="results">Resultados</string>
    <string name="disease_classifier_inference_time">Tiempo de inferencia del clasificador de enfermedades</string>
    <string name="description_classifier_time">Esta prueba utiliza un dataset muy pequeño de 100 imágenes para testear el tiempo de inferencia que toma predecir todas esas imágenes.</string>
    <string name="testing_models">Tiempo de inferencia del detector de hojas y el clasificador</string>
    <string name="description_test_models">Esta prueba utiliza una imagen de la planta del tomate para primero detectar las hojas presentes en la imagen (max. 10 hojas), luego se extrae cada hoja en una imagen separada para luego pasar cada imagen por el clasificador de enfermedades con la finalidad de medir el tiempo requerido que toma todo este proceso.</string>
    <string name="tests">Pruebas</string>
    <string name="description_share_images">Puedes compartir las imágenes producto de tus registros de actividad para ayudarnos a mejorar el modelo de clasificación de enfermedades. \n\nRecuerda que al compartir tus imágenes de plantas con nosotros, nos cedes el derecho de utilizarlas libremente para mejorar modelos de clasificación o crear datasets. Para más información, revisa el “Terminos y condiciones”.</string>
    <string name="agree">Estoy deacuerdo</string>
    <string name="share">Compartir</string>
    <string name="terms_conditions">TÉRMINOS Y CONDICIONES</string>
    <string name="share_images">Compartir Imágenes</string>
    <string name="more_information">Mas información.</string>
    <string name="without_version">No se pudo obtener la versión</string>
    <string name="unknown">Desconocido</string>
    <string name="cancel">Cancelar</string>
    <string name="delete_selected_items">¿Eliminar los elementos seleccionados?</string>
    <string name="previus">Anterior</string>
    <string name="next">Siguiente</string>
    <string name="wait">Espere…</string>
    <string name="apply">Aplicar</string>
    <string name="description_capture_error">No se encontró una planta</string>
    <string name="image_not_loaded">No se puede cargar la imagen</string>
    <string name="updated_note">Nota actualizada</string>
    <string name="error_non_analyzable_image">La imagen no pudo ser analizada</string>
    <string name="error_unknown">Algo salió mal…</string>
    <string name="error_gpu_not_supported_device">El dispositivo no soporta el uso de GPU</string>
    <string name="error_invalid_config">La configuracion aplicada es inválida</string>
    <string name="no_item_selected">No ha seleccionado ningun elemento</string>
    <string name="sick_format">Sick: %d</string>
    <string name="error_temporary_image">No se pudo crear el archivo temporal para respaldo de imagen</string>
    <string name="error_no_leaves">No se encontraron hojas en la imagen</string>
    <string name="error_no_found">Elemento no encontrado</string>
    <string name="error_disease_not_found">Enfermedad no encontrada</string>

    <string name="provider_authorities_camera">com.vanskarner.tomatecare.fileprovider</string>
    <string name="finished_analysis">Análisis terminado</string>
    <string name="other_image">Otra Imagen</string>
    <string name="detection_inference">Inferencia de detección: %s ms</string>
    <string name="classification_inference">Inferencia de classificación: %s ms</string>
    <string name="detection_model">Modelo de detección: %s</string>
    <string name="classification_model">Modelo de clasificación: %s</string>
    <string name="used_threads">Hilos usados: %s</string>
    <string name="processing_value">Procesamiento: %s</string>
</resources>