<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.vanskarner.tomatecare.ui.identification.SummaryModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/summary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/chronometer_timer_svgrepo_com"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvInferenceDetection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.format(@string/detection_inference, model.detectionInference)}"
                        tools:text="@string/detection_inference" />

                    <TextView
                        android:id="@+id/tvInferenceClassification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.format(@string/classification_inference, model.classificationInference)}"
                        tools:text="@string/classification_inference" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/artificial_intelligence_svgrepo_com"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvDetectionModel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.format(@string/detection_model, model.detectionModel)}"
                        tools:text="@string/detection_model" />

                    <TextView
                        android:id="@+id/tvClassificationModel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.format(@string/classification_model, model.classificationModel)}"
                        tools:text="@string/classification_model" />

                    <TextView
                        android:id="@+id/tvUsedThreads"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.format(@string/used_threads, model.usedThreads)}"
                        tools:text="@string/used_threads" />

                    <TextView
                        android:id="@+id/tvProcessing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.format(@string/processing_value, model.processing)}"
                        tools:text="@string/processing_value" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:drawablePadding="4dp"
                    android:gravity="center"
                    android:text="@string/diseases"
                    android:textColor="@color/leaf_sick"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/disease_38" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.format(@string/identified, model.identifiedDiseases)}"
                    tools:text="@string/identified" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_diseases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@{model.diseases}"
                android:textColor="@color/leaf_sick"
                android:textStyle="bold"
                tools:text="- Bacterial Spot\n- Mosaic virus" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imvSummaryOk"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/sign_check_svgrepo_com"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/btnRecommendations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/recommendations"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
